--- a/css/header.css
+++ b/css/header.css
@@ -27,6 +27,21 @@
   display: block;
 }
 
+.header-menu a::after {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 0px;
+  background-color: #141414;
+  margin-top: 2px;
+  transition: width 0.3s;
+  position: absolute;
+}
+
+.header-menu a:hover::after {
+  width: 100%;
+}
+
 @media (max-width: 800px) {
   .header {
     flex-direction: column;
