--- a/css/header.css
+++ b/css/header.css
@@ -13,7 +13,7 @@
 
 .header-menu {
   display: flex;
-  gap: 10px;
+  gap: 10px 30px;
   flex-wrap: wrap;
   justify-content: center;
 }
@@ -21,10 +21,11 @@
 .header-menu a {
   font-size: 1.125rem;
   line-height: 1.3em;
-  padding: 10px 20px;
+  padding: 10px 0px;
   text-decoration: none;
   color: #141414;
   display: block;
+  position: relative;
 }
 
 .header-menu a::after {
@@ -33,7 +34,7 @@
   height: 2px;
   width: 0px;
   background-color: #141414;
-  margin-top: 2px;
+  margin-top: 1px;
   transition: width 0.3s;
   position: absolute;
 }
